project/stage/testing/lexical/parse_tests/tests/reject/bad_statements/bad_expr_semicolon_statements/before_var_decl.ul
void main() {
    identifier ;
    void shouldGoAtTop;
}
